<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_account_circle_black_24dp"/>

    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notifications_black_24dp"/>

    <item
        android:id="@+id/add_location"
        android:title="@string/addLocation"
        android:icon="@drawable/ic_add_black_24dp"/>

    <item
        android:id="@+id/business_page"
        android:title="@string/your_business_page"
        android:icon="@drawable/ic_description_black_24dp"/>

    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us"
        android:icon="@drawable/ic_perm_phone_msg_black_24dp"/>

    <item
        android:id="@+id/rate"
        android:title="@string/rate"
        android:icon="@drawable/ic_star_black_24dp"/>

    <item
        android:id="@+id/developers"
        android:title="@string/developers"
        android:icon="@drawable/ic_people_outline_black_24dp"/>

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_black_24dp"/>

    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/ic_help_outline_black_24dp"/>

    <item
        android:id="@+id/ahout"
        android:title="@string/about"
        android:icon="@drawable/ic_info_outline_black_24dp"/>

    <item
        android:id="@+id/privacy"
        android:title="@string/privacy"
        android:icon="@drawable/ic_verified_user_black_24dp"/>

    <item
        android:id="@+id/log_out"
        android:title="@string/log_out"
        android:icon="@drawable/ic_exit_to_app_black_24dp"/>

</menu>